--- a/src/leaderboard.html
+++ b/src/leaderboard.html
@@ -12,7 +12,6 @@
     <script src="data.js" defer></script>
     <script src="leaderboardScript.js" defer></script>
     <title>F1 Leaderboard</title>
-
 </head>
 <body>
 <main>
@@ -30,11 +29,11 @@
             </select>
             <label class="label-title">Time: </label>
             <div class="times-container">
-                <label for="minutes" class="label-time">Minutes: </label>
+                <label for="minutes" class="label-time">Minutes:</label>
                 <input type="number" id="minutes" name="minutes" class="input-field input-small" value="0">
-                <label for="seconds" class="label-time">Seconds </label>
+                <label for="seconds" class="label-time">Seconds:</label>
                 <input type="number" id="seconds" name="seconds" class="input-field input-small" value="0">
-                <label for="fractions" class="label-time">Fractions: </label>
+                <label for="fractions" class="label-time">Fractions:</label>
                 <input type="number" id="fractions" name="fractions" class="input-field input-small" value="0">
                 <label for="tyres" class="label-time">Tyres:</label>
                 <select name="tyres" id="tyres" class="select-field select-small">
@@ -47,7 +46,6 @@
             <input type="submit" class="btn-submit add-time-btn" value="Add">
 
         </form>
-        <img src="./assets/cars/mercedes.png" alt="" class="team-img">
         <table class="leaderboard">
             <thead>
                 <tr>
