--- a/src/leaderboard.html
+++ b/src/leaderboard.html
@@ -56,6 +56,7 @@
                     <th class="team"></th>
                     <th>Times</th>
                     <th>Gap</th>
+                    <th>Tyres</th>
                     <th>Laps</th>
                 </tr>
             </thead>
@@ -72,7 +73,8 @@
                     </td>
                     <td>1:23:121</td>
                     <td>---</td>
-                    <td>5</td>
+                    <td>S</td>
+                    <td>1</td>
                 </tr>
             </tbody>
         </table>
