Added basic modal functionality

--- a/src/leaderboard.html
+++ b/src/leaderboard.html
@@ -6,15 +6,24 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="modals.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+          rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ab015a3fb5.js" crossorigin="anonymous"></script>
     <script src="data.js" defer></script>
+    <script src="helpers.js" defer></script>
+    <script src="modals.js" defer></script>
     <script src="leaderboardScript.js" defer></script>
     <title>F1 Leaderboard</title>
 </head>
 <body>
 <main>
+    <button class="modal-button">
+        <i class="fas fa-plus"></i>
+    </button>
+    <a href="index.html"><i class="fas fa-chevron-left"></i></a>
     <header>
         <h1 class="title"></h1>
         <form class="add-time-form">
@@ -48,37 +57,48 @@
         </form>
         <table class="leaderboard">
             <thead>
-                <tr>
-                    <th class="number">Number</th>
-                    <th class="helmet"></th>
-                    <th>Driver</th>
-                    <th>Team</th>
-                    <th class="team"></th>
-                    <th>Times</th>
-                    <th>Gap</th>
-                    <th>Tyres</th>
-                    <th>Laps</th>
-                </tr>
+            <tr>
+                <th class="number">Number</th>
+                <th class="helmet"></th>
+                <th>Driver</th>
+                <th>Team</th>
+                <th class="team"></th>
+                <th>Times</th>
+                <th>Gap</th>
+                <th>Tyres</th>
+                <th>Laps</th>
+            </tr>
             </thead>
             <tbody class="table-root">
-                <tr>
-                    <td>3</td>
-                    <td>
-                        <img src=./assets/helmets/ricciardo_helmet.png alt="ricky_bobby" class="helmet-img">
-                    </td>
-                    <td>Daniel Ricciardo</td>
-                    <td>McLaren</td>
-                    <td>
-                        <img src=./assets/cars/mclaren.png alt="mclaren" class="team-img">
-                    </td>
-                    <td>1:23:121</td>
-                    <td>---</td>
-                    <td>S</td>
-                    <td>1</td>
-                </tr>
+            <tr>
+                <td>3</td>
+                <td>
+                    <img src=./assets/helmets/ricciardo_helmet.png alt="ricky_bobby" class="helmet-img">
+                </td>
+                <td>Daniel Ricciardo</td>
+                <td>McLaren</td>
+                <td>
+                    <img src=./assets/cars/mclaren.png alt="mclaren" class="team-img">
+                </td>
+                <td>1:23:121</td>
+                <td>---</td>
+                <td>S</td>
+                <td>1</td>
+            </tr>
             </tbody>
         </table>
     </header>
 </main>
+
+<div class="blackened"></div>
+<div class="popup-modal">
+    <i class="fas fa-times modal-close"></i>
+    <h1 class="font-weight-bold">
+        Modal One Title
+    </h1>
+    <div class="popup-modal-content">
+        <p>Bonjour!</p>
+    </div>
+</div>
 </body>
 </html>
