Added stuff to basic modal for now

--- a/src/leaderboard.html
+++ b/src/leaderboard.html
@@ -20,9 +20,6 @@
 </head>
 <body>
 <main>
-    <button class="modal-button">
-        <i class="fas fa-plus"></i>
-    </button>
     <a href="index.html"><i class="fas fa-chevron-left"></i></a>
     <header>
         <h1 class="title"></h1>
@@ -71,19 +68,19 @@
             </thead>
             <tbody class="table-root">
             <tr>
-                <td>3</td>
-                <td>
-                    <img src=./assets/helmets/ricciardo_helmet.png alt="ricky_bobby" class="helmet-img">
-                </td>
-                <td>Daniel Ricciardo</td>
-                <td>McLaren</td>
-                <td>
-                    <img src=./assets/cars/mclaren.png alt="mclaren" class="team-img">
-                </td>
-                <td>1:23:121</td>
-                <td>---</td>
-                <td>S</td>
-                <td>1</td>
+<!--                <td>3</td>-->
+<!--                <td>-->
+<!--                    <img src=./assets/helmets/ricciardo_helmet.png alt="ricky_bobby" class="helmet-img">-->
+<!--                </td>-->
+<!--                <td>Daniel Ricciardo</td>-->
+<!--                <td>McLaren</td>-->
+<!--                <td>-->
+<!--                    <img src=./assets/cars/mclaren.png alt="mclaren" class="team-img">-->
+<!--                </td>-->
+<!--                <td>1:23:121</td>-->
+<!--                <td>-&#45;&#45;</td>-->
+<!--                <td>S</td>-->
+<!--                <td>1</td>-->
             </tr>
             </tbody>
         </table>
@@ -97,7 +94,18 @@
         Modal One Title
     </h1>
     <div class="popup-modal-content">
-        <p>Bonjour!</p>
+        <table class="driver-laps-table">
+            <thead>
+            <tr>
+                <th class="number">Lap #</th>
+                <th>Times</th>
+                <th>Gap</th>
+                <th>Tyres</th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody class="driver-laps-table-root">
+        </table>
     </div>
 </div>
 </body>
