Added styling to modal

--- a/src/leaderboard.html
+++ b/src/leaderboard.html
@@ -68,19 +68,7 @@
             </thead>
             <tbody class="table-root">
             <tr>
-<!--                <td>3</td>-->
-<!--                <td>-->
-<!--                    <img src=./assets/helmets/ricciardo_helmet.png alt="ricky_bobby" class="helmet-img">-->
-<!--                </td>-->
-<!--                <td>Daniel Ricciardo</td>-->
-<!--                <td>McLaren</td>-->
-<!--                <td>-->
-<!--                    <img src=./assets/cars/mclaren.png alt="mclaren" class="team-img">-->
-<!--                </td>-->
-<!--                <td>1:23:121</td>-->
-<!--                <td>-&#45;&#45;</td>-->
-<!--                <td>S</td>-->
-<!--                <td>1</td>-->
+
             </tr>
             </tbody>
         </table>
@@ -90,7 +78,7 @@
 <div class="blackened"></div>
 <div class="popup-modal">
     <i class="fas fa-times modal-close"></i>
-    <h1 class="font-weight-bold">
+    <h1 class="modal-title">
         Modal One Title
     </h1>
     <div class="popup-modal-content">
