--- a/src/leaderboard.html
+++ b/src/leaderboard.html
@@ -5,13 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://kit.fontawesome.com/ab015a3fb5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="modals.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
           rel="stylesheet">
-    <script src="https://kit.fontawesome.com/ab015a3fb5.js" crossorigin="anonymous"></script>
+
     <script src="data.js" defer></script>
     <script src="helpers.js" defer></script>
     <script src="leaderboardScript.js" defer></script>
@@ -22,13 +23,17 @@
     <a href="index.html"><i class="fas fa-chevron-left"></i></a>
     <i class="fas fa-trash-alt delete-event"></i>
     <header>
-        <h1 class="title"></h1>
+        <div class="titleContainer">
+            <h1 class="title"></h1>
+            <i class="fas fa-edit edit-title isVisible"></i>
+        </div>
         <form class="add-time-form">
-            <label for="tracks" class="label-title">Track: </label>
-            <select id="tracks" name="tracksSelect" class="select-field select-big tracks">
+            <div class="tracksSelectContainer">
+                <label for="tracks" class="label-title">Track: </label>
+                <select id="tracks" name="tracksSelect" class="select-field select-big tracks">
 
-            </select>
-
+                </select>
+            </div>
             <label for="drivers" class="label-title">Driver: </label>
             <select id="drivers" name="driversSelect" class="select-field select-big drivers">
 
@@ -36,11 +41,11 @@
             <label class="label-title">Time: </label>
             <div class="times-container">
                 <label for="minutes" class="label-time">Minutes:</label>
-                <input type="number" id="minutes" name="minutes" class="input-field input-small" value="0">
+                <input type="number" id="minutes" name="minutes" class="input-field input-small" placeholder="0" value="0">
                 <label for="seconds" class="label-time">Seconds:</label>
-                <input type="number" id="seconds" name="seconds" class="input-field input-small" value="0">
+                <input type="number" id="seconds" name="seconds" class="input-field input-small" placeholder="00" value="00">
                 <label for="fractions" class="label-time">Fractions:</label>
-                <input type="number" id="fractions" name="fractions" class="input-field input-small" value="0">
+                <input type="number" id="fractions" name="fractions" class="input-field input-small" placeholder="000" value="000">
                 <label for="tyres" class="label-time">Tyres:</label>
                 <select name="tyres" id="tyres" class="select-field select-small">
                     <option value="S">Soft</option>
