Added basic validation and sorting

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="modals.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <script src="data.js" defer></script>
     <script src="helpers.js" defer></script>
@@ -22,7 +22,9 @@
     <header>
         <h1>F1 Leaderboard</h1>
         <form class="create-event-form">
-            <input type="text" placeholder="Event name..." aria-label="event name" class="input-field input-big enter-event">
+            <div class="event-title-container">
+                <input type="text" placeholder="Event name..." aria-label="event name" class="input-field input-big enter-event">
+            </div>
             <input type="submit" class="btn-submit create-event-btn" value="Create">
         </form>
     </header>
