--- a/src/leaderboard.html
+++ b/src/leaderboard.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="modals.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <script src="data.js" defer></script>
     <script src="helpers.js" defer></script>
@@ -26,6 +25,7 @@
         <div class="titleContainer">
             <h1 class="title"></h1>
             <i class="fas fa-edit edit-title isVisible"></i>
+            <i class="fas fa-save save-title"></i>
         </div>
         <form class="add-time-form">
             <div class="tracksSelectContainer">
@@ -40,18 +40,29 @@
             </select>
             <label class="label-title">Time: </label>
             <div class="times-container">
-                <label for="minutes" class="label-time">Minutes:</label>
-                <input type="number" id="minutes" name="minutes" class="input-field input-small" placeholder="0" value="0">
-                <label for="seconds" class="label-time">Seconds:</label>
-                <input type="number" id="seconds" name="seconds" class="input-field input-small" placeholder="00" value="00">
-                <label for="fractions" class="label-time">Fractions:</label>
-                <input type="number" id="fractions" name="fractions" class="input-field input-small" placeholder="000" value="000">
-                <label for="tyres" class="label-time">Tyres:</label>
-                <select name="tyres" id="tyres" class="select-field select-small">
-                    <option value="S">Soft</option>
-                    <option value="M">Medium</option>
-                    <option value="H">Hard</option>
-                </select>
+                <div class="minutesContainer">
+                    <label for="minutes" class="label-time">Minutes:</label>
+                    <input type="number" id="minutes" name="minutes" class="input-field input-small" placeholder="0" value="0">
+                </div>
+                <div class="secondsContainer">
+                    <label for="seconds" class="label-time">Seconds:</label>
+                    <input type="number" id="seconds" name="seconds" class="input-field input-small" placeholder="00" value="00">
+                </div>
+                <div class="fractionsContainer">
+                    <label for="fractions" class="label-time">Fractions:</label>
+                    <input type="number" id="fractions" name="fractions" class="input-field input-small" placeholder="000" value="000">
+                </div>
+                <div class="tyresContainer">
+                    <label for="tyres" class="label-time">Tyres:</label>
+                    <select name="tyres" id="tyres" class="select-field select-small">
+                        <option value="S">Soft</option>
+                        <option value="M">Medium</option>
+                        <option value="H">Hard</option>
+                        <option value="I">Intermediate</option>
+                        <option value="W">Wet</option>
+                    </select>
+                </div>
+
             </div>
 
             <input type="submit" class="btn-submit add-time-btn" value="Add">
@@ -83,16 +94,16 @@
 <div class="blackened"></div>
 <div class="popup-modal modal-hidden driver-modal">
     <i class="fas fa-times modal-driver-close"></i>
-    <h1 class="modal-title">
+    <h2 class="modal-title">
 
-    </h1>
+    </h2>
     <div class="popup-modal-content">
         <table class="driver-laps-table">
             <thead>
             <tr>
-                <th class="number">Lap #</th>
-                <th>Times</th>
-                <th>Gap</th>
+                <th class="lapNumber">Lap #</th>
+                <th class="lapTime">Times</th>
+                <th class="gap">Gap</th>
                 <th>Tyres</th>
                 <th></th>
             </tr>
@@ -104,9 +115,9 @@
 <div class="blur"></div>
 <div class="popup-modal modal-hidden delete-time-modal">
     <i class="fas fa-times modal-delete-time-close"></i>
-    <h1>
+    <h2>
         Are you sure?
-    </h1>
+    </h2>
     <div class="popup-modal-content">
         <p>
             Are you sure you want to delete?
@@ -121,9 +132,9 @@
 <div class="blackened2"></div>
 <div class="popup-modal modal-hidden delete-event-modal">
     <i class="fas fa-times modal-delete-event-close"></i>
-    <h1>
+    <h2>
         Are you sure?
-    </h1>
+    </h2>
     <div class="popup-modal-content">
         <p>
             Are you sure you want to delete this event?
