--- a/src/leaderboard.html
+++ b/src/leaderboard.html
@@ -101,9 +101,9 @@
         <table class="driver-laps-table">
             <thead>
             <tr>
-                <th class="lapNumber">Lap #</th>
-                <th class="lapTime">Times</th>
-                <th class="gap">Gap</th>
+                <th class="lapNumber">Lap # <i class="fas fa-sort"></i></th>
+                <th class="lapTime">Times <i class="fas fa-sort"></i></th>
+                <th class="gap">Gap <i class="fas fa-sort"></i></th>
                 <th>Tyres</th>
                 <th></th>
             </tr>
