added back button to delete event

--- a/src/leaderboard.html
+++ b/src/leaderboard.html
@@ -20,7 +20,7 @@
 <body>
 <main>
     <a href="index.html"><i class="fas fa-chevron-left"></i></a>
-    <i class="fas fa-trash-alt delete-event"></i>
+    <i class="fas fa-trash-alt delete-event isVisible"></i>
     <header>
         <div class="titleContainer">
             <h1 class="title"></h1>
