--- a/src/leaderboard.html
+++ b/src/leaderboard.html
@@ -65,7 +65,7 @@
 
             </div>
 
-            <input type="submit" class="btn-submit add-time-btn" value="Add">
+            <input type="submit" class="btn-submit add-time-btn" value="Add" disabled>
 
         </form>
         <table class="leaderboard">
